# fx-cg100-embedded-sci-library

./: README.md  pyproject.toml
cellular_automata/: cellular_automaton.py  conway_gol.py  langton_ant.py
fractals_chaos/: barnsley_fern.py  burning_ship.py  dragon_curve.py  julia_set.py  koch_snowflake.py  mandelbrot_set.py  sierpinski_triangle.py
geometry_visual/: shapes.py  shapes_lib.py
physics/: psi_fx.py  psi_fx_lib.py  psi_pico.py
